--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -10,6 +10,29 @@
       "text/html": [
        "<!-- style.html: General app CSS -->\n",
        "<style>\n",
+       "\n",
+       ":root {\n",
+       "    --dark-blue: #1E3A8A;\n",
+       "    --blue: #60A5FA;\n",
+       "    --light-blue: #93C5FD;\n",
+       "    --green: #34D399;\n",
+       "    --red: #F87171;\n",
+       "    --grey: #718096;\n",
+       "    --light-grey: #D3D3D3;\n",
+       "}\n",
+       "\n",
+       ".selmono {\n",
+       "    font-family: \"Lucida Console\", Monaco, monospace !important;\n",
+       "    width: 100%;\n",
+       "}\n",
+       ".widget-select > select {\n",
+       "    font-family: monospace !important;\n",
+       "}\n",
+       "/* Cause plotly to display \"modebar\" */\n",
+       ".container {\n",
+       "    min-width: 1200px !important;\n",
+       "}\n",
+       "\n",
        ".jupyter-widgets.widget-tab > .p-TabBar .p-TabBar-tab {\n",
        "    flex: 0 1 300px\n",
        "}\n",
@@ -49,6 +72,51 @@
        "pre {\n",
        "    user-select: all;\n",
        "}\n",
+       "\n",
+       ".widget-html-content {\n",
+       "    margin: 0px 0px;\n",
+       "}\n",
+       "\n",
+       "/* Custom CSS */\n",
+       "\n",
+       "/* Header bar */\n",
+       ".c-header-bar {\n",
+       "    height: 56px;\n",
+       "    width: 100%;\n",
+       "    background: var(--dark-blue);\n",
+       "    color: white;\n",
+       "    padding: 0px 0px 0px 48px;\n",
+       "    flex-flow: row nowrap;\n",
+       "    align-items: center; \n",
+       "}\n",
+       "\n",
+       "/* Stepper widget */\n",
+       ".c-stepper__number {\n",
+       "    color: white;\n",
+       "    height: 40px;\n",
+       "    width: 40px;\n",
+       "    border-radius: 50%;\n",
+       "    text-align: center;\n",
+       "}\n",
+       ".c-stepper__number--current {\n",
+       "    background: var(--blue);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__number--active {\n",
+       "    background: var(--green);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__number--inactive {\n",
+       "    background: var(--light-grey);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__title--active {\n",
+       "    color: var(--dark-blue);\n",
+       "}\n",
+       ".c-stepper__title--inactive {\n",
+       "    color: var(--light-grey);\n",
+       "}\n",
+       "\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -411,13 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8f668158882474bbff634f2fa45b81f",
+       "model_id": "4cf9fb206755451099663ef73827dac7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,7 +587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09e3d4ece1a34171ab7adf91ce999324",
+       "model_id": "237a5a7228b6442cac0620f526dc39d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -650,7 +718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e72723a7b430482081aab1f2f5936168",
+       "model_id": "a614414b109c475b8112794e222f8aa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -745,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -760,6 +828,7 @@
        "     background:#E0E6E5;\n",
        "     position: absolute;\n",
        "     top: 0px;\n",
+       "     \n",
        "    }\n",
        "<style/>\n"
       ],
@@ -808,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -866,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c394a4cbe8fc4059a5a1e23aa7682cef",
+       "model_id": "243c54d1c88f4446907db4216bb29268",
        "version_major": 2,
        "version_minor": 0
       },
@@ -998,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
