--- a/agmip-submission.ipynb
+++ b/agmip-submission.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "c5774e93",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,8 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "f1d576bb",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +44,11 @@
        "                              parent instead. */\n",
        "}\n",
        "\n",
-       "/* CSS classes for custom components. To avoid name clashes with the existing classes used by ipywidgets, \n",
-       "   their names are prepended with \"c\" for \"custom\". The name also follows BEM convention. */\n",
+       "/* CSS classes for custom components. \n",
+       "   \n",
+       "   To avoid name clashes with the existing classes used by ipywidgets, \n",
+       "   their names are prepended with \"c\" for \"custom\". The name also follows BEM convention. \n",
+       "*/\n",
        "\n",
        "/* Header bar */\n",
        ".c-header-bar {\n",
@@ -112,6 +104,11 @@
        "}\n",
        "\n",
        "/* Extend CSS classes used by native ipywidgets components */\n",
+       "\n",
+       "div.output_area {\n",
+       "    align-items: unset !important;\n",
+       "    padding: 0px 0px !important;\n",
+       "}\n",
        "\n",
        ".widget-html-content {\n",
        "    /* These attributes were unset because they mess up flex stylings for ui.HTML components */\n",
@@ -178,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34eded492f3c4e908a2991ea59d7b0ed",
+       "model_id": "b5a8e379484e4e548893015edf91be9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +214,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11716888",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -239,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
