--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -21,10 +21,153 @@
        "    --light-grey: #D3D3D3;\n",
        "}\n",
        "\n",
+       "\n",
+       "/*** Style basic HTML elements ***/\n",
+       "\n",
        ".selmono {\n",
        "    font-family: \"Lucida Console\", Monaco, monospace !important;\n",
        "    width: 100%;\n",
        "}\n",
+       "\n",
+       "hr{\n",
+       "    border-color: inherit; /* It seems like there's no way to assign a CSS class to a <hr> element, since ipywidgets will\n",
+       "                              always wrap it with <div>. So, we let it inherit from its parent element and style the \n",
+       "                              parent instead. */\n",
+       "}\n",
+       "\n",
+       "\n",
+       "/*** CSS classes for custom components. \n",
+       "   \n",
+       "   To avoid name clashes with the existing classes used by ipywidgets, \n",
+       "   their names are prepended with \"c\" for \"custom\". The name also follows BEM convention. \n",
+       "***/\n",
+       "\n",
+       "/* Text colors */\n",
+       ".c-text-grey {\n",
+       "    color: var(--grey);\n",
+       "}\n",
+       ".c-text-white{\n",
+       "    color: white);\n",
+       "}\n",
+       "\n",
+       "/* Header bar */\n",
+       ".c-header-bar {\n",
+       "    background: var(--dark-blue);\n",
+       "    color: white;\n",
+       "    align-items: center;\n",
+       "    font-weight: 500;\n",
+       "    height: 56px;\n",
+       "    padding: 0px 48px;\n",
+       "    margin: 0px 0px;\n",
+       "}\n",
+       "\n",
+       "/* Stepper */\n",
+       ".c-stepper {\n",
+       "    align-items: center;\n",
+       "}\n",
+       ".c-stepper__number {\n",
+       "    color: white;\n",
+       "    height: 40px;\n",
+       "    width: 40px;\n",
+       "    border-radius: 50%;\n",
+       "    align-items: center;\n",
+       "    justify-content: center;\n",
+       "    margin: 0px 4px;\n",
+       "}\n",
+       ".c-stepper__number--current {\n",
+       "    background: var(--blue);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__number--active {\n",
+       "    background: var(--green);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__number--inactive {\n",
+       "    background: var(--light-grey);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-stepper__title--active {\n",
+       "    color: var(--dark-blue);\n",
+       "    padding: 0px 4px;\n",
+       "}\n",
+       ".c-stepper__title--inactive {\n",
+       "    color: var(--light-grey);\n",
+       "    padding: 0px 4px;\n",
+       "}\n",
+       ".c-stepper__separator--active {\n",
+       "    padding: 0px 4px;\n",
+       "    color: var(--blue);\n",
+       "}\n",
+       ".c-stepper__separator--inactive {\n",
+       "    padding: 0px 4px;\n",
+       "    color: var(--light-grey);\n",
+       "}\n",
+       "\n",
+       "/* File upload area */\n",
+       ".c-upload-area {\n",
+       "    background: transparent;\n",
+       "    width: 500px;\n",
+       "    height: 200px;\n",
+       "    position: relative;\n",
+       "}\n",
+       ".c-upload-area__background,\n",
+       ".c-upload-area__button-overlay {\n",
+       "    width: 95%;\n",
+       "    height: 95%;\n",
+       "    background: transparent;\n",
+       "    border-radius: 15px;\n",
+       "    position: absolute;\n",
+       "    top: 0;\n",
+       "    left: 0;\n",
+       "}\n",
+       ".c-upload-area__background {\n",
+       "    color: var(--grey);\n",
+       "    border: 1px dashed var(--grey);\n",
+       "    display: flex !important;\n",
+       "    flex-flow: column nowrap !important;\n",
+       "    align-items: center !important;\n",
+       "    justify-content: center !important;        \n",
+       "}\n",
+       ".c-upload-area__overlay-button {\n",
+       "    z-index: 10;\n",
+       "}\n",
+       ".c-upload-area__overlay-button-overlay:hover {\n",
+       "    box-shadow: none !important;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:active {\n",
+       "    background: transparent;\n",
+       "    color: grey;\n",
+       "    outline: none !important;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:focus {\n",
+       "    box-shadow: none !important;\n",
+       "    outline: none !important;\n",
+       "}\n",
+       "\n",
+       "/*** Extend CSS classes used by native ipywidgets components ***/\n",
+       "\n",
+       "div.output_subarea {\n",
+       "    padding: 0px 0px;   /* Prevent display(\"style.html\") or other \"empty\" display() from taking up screen space */\n",
+       "}\n",
+       "\n",
+       "div.output_area {\n",
+       "    justify-content: center !important;     /* Position the component being displayed at the center of the \n",
+       "                                               output area */\n",
+       "}\n",
+       "\n",
+       ".widget-box {\n",
+       "    height: \n",
+       "}\n",
+       "\n",
+       ".widget-html-content {\n",
+       "    /* These attributes were unset because they mess up flex stylings for ui.HTML components */\n",
+       "    align-self: unset !important;       \n",
+       "    flex-shrink: unset !important;\n",
+       "    flex-grow: unset !important;\n",
+       "}\n",
+       "\n",
+       "/*The following modification were made by the scsa project, which this project is based on*/\n",
+       "\n",
        ".widget-select > select {\n",
        "    font-family: monospace !important;\n",
        "}\n",
@@ -72,51 +215,6 @@
        "pre {\n",
        "    user-select: all;\n",
        "}\n",
-       "\n",
-       ".widget-html-content {\n",
-       "    margin: 0px 0px;\n",
-       "}\n",
-       "\n",
-       "/* Custom CSS */\n",
-       "\n",
-       "/* Header bar */\n",
-       ".c-header-bar {\n",
-       "    height: 56px;\n",
-       "    width: 100%;\n",
-       "    background: var(--dark-blue);\n",
-       "    color: white;\n",
-       "    padding: 0px 0px 0px 48px;\n",
-       "    flex-flow: row nowrap;\n",
-       "    align-items: center; \n",
-       "}\n",
-       "\n",
-       "/* Stepper widget */\n",
-       ".c-stepper__number {\n",
-       "    color: white;\n",
-       "    height: 40px;\n",
-       "    width: 40px;\n",
-       "    border-radius: 50%;\n",
-       "    text-align: center;\n",
-       "}\n",
-       ".c-stepper__number--current {\n",
-       "    background: var(--blue);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__number--active {\n",
-       "    background: var(--green);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__number--inactive {\n",
-       "    background: var(--light-grey);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__title--active {\n",
-       "    color: var(--dark-blue);\n",
-       "}\n",
-       ".c-stepper__title--inactive {\n",
-       "    color: var(--light-grey);\n",
-       "}\n",
-       "\n",
        "</style>\n"
       ],
       "text/plain": [
@@ -479,13 +577,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cf9fb206755451099663ef73827dac7",
+       "model_id": "3f5992914c7a4c5697e50c0b04ee1d80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,7 +685,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "237a5a7228b6442cac0620f526dc39d7",
+       "model_id": "c0e4930a1db94b2cbc8274d7e8c06630",
        "version_major": 2,
        "version_minor": 0
       },
@@ -718,7 +816,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a614414b109c475b8112794e222f8aa7",
+       "model_id": "d7ec2acb8b7741c3a0a625fcf5d899a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -935,7 +1033,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "243c54d1c88f4446907db4216bb29268",
+       "model_id": "b5009a8d02a74dbaa1ea73d9109e06e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1067,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
