--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -4,259 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<!-- style.html: General app CSS -->\n",
-       "<style>\n",
-       "\n",
-       ":root {\n",
-       "    --dark-blue: #1E3A8A;\n",
-       "    --blue: #60A5FA;\n",
-       "    --light-blue: #93C5FD;\n",
-       "    --green: #34D399;\n",
-       "    --red: #F87171;\n",
-       "    --grey: #718096;\n",
-       "    --light-grey: #D3D3D3;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "/*** Style basic HTML elements ***/\n",
-       "\n",
-       ".selmono {\n",
-       "    font-family: \"Lucida Console\", Monaco, monospace !important;\n",
-       "    width: 100%;\n",
-       "}\n",
-       "\n",
-       "hr{\n",
-       "    border-color: inherit; /* It seems like there's no way to assign a CSS class to a <hr> element, since ipywidgets will\n",
-       "                              always wrap it with <div>. So, we let it inherit from its parent element and style the \n",
-       "                              parent instead. */\n",
-       "}\n",
-       "\n",
-       "\n",
-       "/*** CSS classes for custom components. \n",
-       "   \n",
-       "   To avoid name clashes with the existing classes used by ipywidgets, \n",
-       "   their names are prepended with \"c\" for \"custom\". The name also follows BEM convention. \n",
-       "***/\n",
-       "\n",
-       "/* Text colors */\n",
-       ".c-text-grey {\n",
-       "    color: var(--grey);\n",
-       "}\n",
-       ".c-text-white{\n",
-       "    color: white);\n",
-       "}\n",
-       "\n",
-       "/* Header bar */\n",
-       ".c-header-bar {\n",
-       "    background: var(--dark-blue);\n",
-       "    color: white;\n",
-       "    align-items: center;\n",
-       "    font-weight: 500;\n",
-       "    height: 56px;\n",
-       "    padding: 0px 48px;\n",
-       "    margin: 0px 0px;\n",
-       "}\n",
-       "\n",
-       "/* Stepper */\n",
-       ".c-stepper {\n",
-       "    align-items: center;\n",
-       "}\n",
-       ".c-stepper__number {\n",
-       "    color: white;\n",
-       "    height: 40px;\n",
-       "    width: 40px;\n",
-       "    border-radius: 50%;\n",
-       "    align-items: center;\n",
-       "    justify-content: center;\n",
-       "    margin: 0px 4px;\n",
-       "}\n",
-       ".c-stepper__number--current {\n",
-       "    background: var(--blue);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__number--active {\n",
-       "    background: var(--green);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__number--inactive {\n",
-       "    background: var(--light-grey);\n",
-       "    color: white;\n",
-       "}\n",
-       ".c-stepper__title--active {\n",
-       "    color: var(--dark-blue);\n",
-       "    padding: 0px 4px;\n",
-       "}\n",
-       ".c-stepper__title--inactive {\n",
-       "    color: var(--light-grey);\n",
-       "    padding: 0px 4px;\n",
-       "}\n",
-       ".c-stepper__separator--active {\n",
-       "    padding: 0px 4px;\n",
-       "    color: var(--blue);\n",
-       "}\n",
-       ".c-stepper__separator--inactive {\n",
-       "    padding: 0px 4px;\n",
-       "    color: var(--light-grey);\n",
-       "}\n",
-       "\n",
-       "/* File upload area */\n",
-       ".c-upload-area {\n",
-       "    background: transparent;\n",
-       "    width: 500px;\n",
-       "    height: 200px;\n",
-       "    position: relative;\n",
-       "}\n",
-       ".c-upload-area__background,\n",
-       ".c-upload-area__button-overlay {\n",
-       "    width: 95%;\n",
-       "    height: 95%;\n",
-       "    background: transparent;\n",
-       "    border-radius: 15px;\n",
-       "    position: absolute;\n",
-       "    top: 0;\n",
-       "    left: 0;\n",
-       "}\n",
-       ".c-upload-area__background {\n",
-       "    color: var(--grey);\n",
-       "    border: 1px dashed var(--grey);\n",
-       "    display: flex !important;\n",
-       "    flex-flow: column nowrap !important;\n",
-       "    align-items: center !important;\n",
-       "    justify-content: center !important;        \n",
-       "}\n",
-       ".c-upload-area__overlay-button {\n",
-       "    z-index: 10;\n",
-       "}\n",
-       ".c-upload-area__overlay-button-overlay:hover {\n",
-       "    box-shadow: none !important;\n",
-       "}\n",
-       ".c-upload-area__overlay-button:active {\n",
-       "    background: transparent;\n",
-       "    color: grey;\n",
-       "    outline: none !important;\n",
-       "}\n",
-       ".c-upload-area__overlay-button:focus {\n",
-       "    box-shadow: none !important;\n",
-       "    outline: none !important;\n",
-       "}\n",
-       "\n",
-       "/*** Extend CSS classes used by native ipywidgets components ***/\n",
-       "\n",
-       "div.output_subarea {\n",
-       "    padding: 0px 0px;   /* Prevent display(\"style.html\") or other \"empty\" display() from taking up screen space */\n",
-       "}\n",
-       "\n",
-       "div.output_area {\n",
-       "    justify-content: center !important;     /* Position the component being displayed at the center of the \n",
-       "                                               output area */\n",
-       "}\n",
-       "\n",
-       ".widget-box {\n",
-       "    height: \n",
-       "}\n",
-       "\n",
-       ".widget-html-content {\n",
-       "    /* These attributes were unset because they mess up flex stylings for ui.HTML components */\n",
-       "    align-self: unset !important;       \n",
-       "    flex-shrink: unset !important;\n",
-       "    flex-grow: unset !important;\n",
-       "}\n",
-       "\n",
-       "/*The following modification were made by the scsa project, which this project is based on*/\n",
-       "\n",
-       ".widget-select > select {\n",
-       "    font-family: monospace !important;\n",
-       "}\n",
-       "/* Cause plotly to display \"modebar\" */\n",
-       ".container {\n",
-       "    min-width: 1200px !important;\n",
-       "}\n",
-       "\n",
-       ".jupyter-widgets.widget-tab > .p-TabBar .p-TabBar-tab {\n",
-       "    flex: 0 1 300px\n",
-       "}\n",
-       ".p-Collapse-header {\n",
-       "    color: white !important;\n",
-       "    background-color: steelblue !important;\n",
-       "    padding-top: 3px;\n",
-       "    padding-bottom: 3px;\n",
-       "}\n",
-       ".p-TabBar-tabLabel {\n",
-       "    font-weight: bold !important;\n",
-       "    color: steelblue !important;\n",
-       "    margin-top: 1em !important;\n",
-       "    margin-bottom: 1em !important;\n",
-       "}\n",
-       ".widget-label {\n",
-       "    text-align: left !important;\n",
-       "}\n",
-       "p {\n",
-       "    line-height: 1.2em;\n",
-       "    margin-bottom: 1em;\n",
-       "}\n",
-       "/* Avoid output scrollbars (sub-windowing) */\n",
-       ".output_wrapper, .output {\n",
-       "    height: auto !important;\n",
-       "    max-height: 99999px;\n",
-       "}\n",
-       ".output_scroll {\n",
-       "    box-shadow: none !important;\n",
-       "}\n",
-       "#site {\n",
-       "    height: 100% !important;\n",
-       "}\n",
-       ".prompt {\n",
-       "    min-width: 1px !important; /* Collapse left margin */\n",
-       "}\n",
-       "pre {\n",
-       "    user-select: all;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<!-- header.html: Notebook-specific CSS and title -->\n",
-       "<style>\n",
-       ".this_nb_title {\n",
-       "    color: white;\n",
-       "    background-color: #1E3A8A;\n",
-       "    font-size: 16px;\n",
-       "    font-weight: strong;\n",
-       "}\n",
-       ".selmono {\n",
-       "    font-family: \"Lucida Console\", Monaco, monospace !important;\n",
-       "    width: 100%;\n",
-       "}\n",
-       ".widget-select > select {\n",
-       "    font-family: monospace !important;\n",
-       "}\n",
-       "/* Cause plotly to display \"modebar\" */\n",
-       ".container {\n",
-       "    min-width: 1200px !important;\n",
-       "}\n",
-       "</style>\n",
-       "<!-- <span class=\"this_nb_title\">AgMIP Model Submission</span> -->\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %matplotlib widget TODO Make matplotlib interactive mode work correctly \n",
     "\n",
@@ -267,8 +15,8 @@
     "\n",
     "from IPython.display import HTML\n",
     "\n",
-    "display(HTML(filename='style.html'))  # Generic app appearance \n",
-    "display(HTML(filename='header.html')) # Notebook-specific title and style\n",
+    "# display(HTML(filename='style.html'))  # Generic app appearance \n",
+    "# display(HTML(filename='header.html')) # Notebook-specific title and style\n",
     "# display(HTML(filename='header.html')) # Notebook-specific title and style\n",
     "\n",
     "# # Create MVC objects\n",
@@ -583,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f5992914c7a4c5697e50c0b04ee1d80",
+       "model_id": "95788574406f4e17b3ee04306dc1efcc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -685,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0e4930a1db94b2cbc8274d7e8c06630",
+       "model_id": "de9933afe81042ec871251b21951f4b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -816,7 +564,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7ec2acb8b7741c3a0a625fcf5d899a7",
+       "model_id": "23d0e9b8f4d542c985eff4078c114ae1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1033,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5009a8d02a74dbaa1ea73d9109e06e9",
+       "model_id": "a7ad5e5c546841c78f1fccafd411ee33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1165,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
